# pinball

./: Cargo.toml
assets/arenas/: default.arena
assets/images/simple/: credits.txt
src/: main.rs
src/camera/: mod.rs  plugin.rs
src/camera/components/: main_camera.rs  main_camera_bundle.rs  mod.rs
src/camera/systems/: initialize_camera.rs  mod.rs
src/data/: constants.rs  mod.rs  plugin.rs
src/data/arena/: arena.rs  mod.rs  plugin.rs
src/data/arena/objects/: arena_object.rs  bumper.rs  death_zone.rs  flipper.rs  mod.rs  shooter.rs  spawner.rs  wall.rs
src/data/arena/systems/: build_arena.rs  mod.rs
src/data/bumper/: bumper.rs  bumper_bundle.rs  mod.rs  plugin.rs
src/data/bumper/systems/: add_score.rs  mod.rs
src/data/death_zone/: death_zone.rs  death_zone_bundle.rs  mod.rs  plugin.rs
src/data/death_zone/systems/: destroy_balls.rs  (+1 more)
src/data/flipper/: flipper.rs  flipper_bundle.rs  flipper_group.rs  mod.rs  plugin.rs
src/data/pinball/: mod.rs  pinball.rs  pinball_bundle.rs  plugin.rs
src/data/score/: mod.rs  plugin.rs  score_ui.rs  score_ui_bundle.rs
src/data/shooter/: mod.rs  plugin.rs  shooter.rs  shooter_bundle.rs
src/data/spawner/: mod.rs  plugin.rs  spawner.rs  spawner_bundle.rs
src/data/wall/: mod.rs  plugin.rs  wall.rs  wall_bundle.rs
src/dev/: plugin.rs
src/dev/systems/: dump_current_arena.rs  handle_dev_input.rs  mod.rs
src/input/: plugin.rs
src/input/systems/: handle_input.rs  mod.rs
src/lua/: mod.rs  plugin.rs
src/lua/objects/: arena.rs  bumper.rs  death_zone.rs  flipper.rs  lua_object.rs  mod.rs  shooter.rs  wall.rs
(+5 files in other folders)
