[package]
name = "pinball"
version = "0.1.0"
edition = "2021"

[features]
# default = ["dev"]
dev = [ "bevy_rapier2d/debug-render-2d" ]

[dependencies]
anyhow = "1"
bevy = "0.14"
bevy-inspector-egui = "0.25"
bevy_asset_loader = { version = "0.21", features = ["2d"] }
bevy_rapier2d = "0.27"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
